<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small">

        <!-- processes -->
        <TextView
            android:id="@+id/item_buying_process_process"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_tiny"
            android:layout_weight="1.5"
            android:text="@string/processes"
            android:textSize="@dimen/text_size_medium" />

        <!-- card -->
        <TextView
            android:id="@+id/item_buying_process_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginEnd="@dimen/margin_tiny"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/card"
            android:textSize="@dimen/text_size_medium" />

        <!-- date -->
        <TextView
            android:id="@+id/item_buying_process_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginEnd="@dimen/margin_tiny"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="@dimen/text_size_medium" />

        <!-- cost -->
        <TextView
            android:id="@+id/item_buying_process_cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginEnd="@dimen/margin_tiny"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cost"
            android:textSize="@dimen/text_size_medium" />

    </LinearLayout>

    <!-- separator -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@color/blueyGrey" />

</LinearLayout>