<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".views.accountActivities.BuyingProcessesActivity">

    <!-- title bar -->
    <RelativeLayout
        android:id="@+id/buying_processes_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_tiny"
        android:layoutDirection="ltr">

        <!-- back -->
        <ImageView
            android:id="@+id/buying_processes_back"
            android:layout_width="@dimen/icon_back"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/margin_small"
            android:src="@drawable/ic_arrow_left_only" />

        <!-- title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/buying_processes"
            android:textColor="@color/battleshipGrey"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- headers -->
    <LinearLayout
        android:id="@+id/buying_processes_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buying_processes_title_bar"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_medium">

        <!-- processes -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_tiny"
            android:layout_weight="1.5"
            android:text="@string/processes"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <!-- card -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginEnd="@dimen/margin_tiny"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/card"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <!-- date -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginEnd="@dimen/margin_tiny"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <!-- cost -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginEnd="@dimen/margin_tiny"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cost"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- separator -->
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/buying_processes_header"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@color/blueyGrey" />

    <!-- processes recycler -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/buying_processes_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_renew_membership"
        android:layout_below="@id/separator"
        android:layout_gravity="center" />

    <!-- empty view -->
    <TextView
        android:id="@+id/buying_processes_empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/buying_processes_empty_hint"
        android:textSize="@dimen/text_size_medium"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_renew_membership"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:padding="@dimen/margin_medium"
        android:text="@string/renew_membership"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

</RelativeLayout>