<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_top_corners_c_white_borderd_grey">
    <!-- tabs -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <!-- top ten tab -->
        <TextView
            android:id="@+id/tv_top_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoMirrored="true"
            android:background="@color/colorPrimary"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_v_padding"
            android:paddingBottom="@dimen/btn_v_padding"
            android:text="@string/top_ten"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_x_small"
            android:textStyle="bold"
            android:visibility="gone" />

        <!-- salon details tab -->
        <TextView
            android:id="@+id/tv_product_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoMirrored="true"
            android:background="@color/colorPrimary"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_v_padding"
            android:paddingBottom="@dimen/btn_v_padding"
            android:text="@string/product_details"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_x_small"
            android:textStyle="bold" />

        <!-- salon activity tab -->
        <TextView
            android:id="@+id/tv_salon_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_rectangle_white_border_grey"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_v_padding"
            android:paddingBottom="@dimen/btn_v_padding"
            android:text="@string/salon_activity"
            android:textSize="@dimen/text_size_x_small"
            android:textStyle="bold" />

        <!-- salon chat tab -->
        <TextView
            android:id="@+id/tv_salon_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_rectangle_white_border_grey"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_v_padding"
            android:paddingBottom="@dimen/btn_v_padding"
            android:text="@string/chat_room"
            android:textSize="@dimen/text_size_x_small"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>
</RelativeLayout>

